# m80

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.checkintest  Makefile.in  QUOTES  README  TODO  configure  configure.in  mkinstalldirs  runTests.sh
autofiles/: README  generic.mk  libs.mk  pp  pp.m4  semantic.cache  texi2html
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/: 1.0_Tech_Requirements.texi  Makefile.am  Makefile.in
doc/old/: 1.0_Tech_Requirements.doc  Architecture_Discussion.texi.m4  CYGWIN.texi.m4  FAQ.texi.m4  Rules_Engine.texi.m4  Technical_Requirements.texi.m4  perl_preprocessor.texi.m4
doc/old/uml/: Modules.zargo
examples/m80repository/: Makefile
examples/m80repository/bdfs/: bret.m4  butthead_bdw.m4
examples/m80repository/environments/: Makefile  butthead.m4  renwixDotCom.m4
examples/m80repository/projects/: deb.m4
knowledgeBase/: sfUpload  sshTunnel
lib/: Makefile.am  Makefile.in
lib/db/: Makefile.am  Makefile.in
lib/emacs/: pod.el
lib/m4/: Makefile.am  Makefile.in  base.m4  list.m4  m80buildMacros.m4  m80names.m4  make.m4  naiveProcess.m4  pod.m4  scsh.m4  shell.m4  simpleConversion.m4  tmp.txt.m4  vbscript.m4
lib/make/: Makefile.am  Makefile.in  dbcode.mk  dbgeneric.mk  generic.mk  index.html  index.txt  leaf.html  leaf.mk  local.mk  local.mk.m4  m4rules.m4  m80doc.mk  m80generic.mk  m80generic.mk.m4  m80loadenv.mk  m80standalone.mk  oracle.mk  postgresql.mk  repositoryRules.mk  repositoryRules.mk.m4  schemaPatch.mk  semantic.cache  systemWide.html  test_harness.mk  webDBweb.mk  webDBweb.mk.m4
lib/perl/: Makefile.am  Makefile.in  OOPerl.m4  base.pl  base.plx  m80ACInstaller.pl  m80ACInstaller.pl.m4  m80buildMacros.pl  perlbase.m4  perlhtml.m4  sample_perl_oo.pm  scripts.plx  slurp.pm  stdlib.pl  struct.plx
lib/perl/Net/: Makefile.am  Makefile.in  Sourceforge.pm
lib/perl/m80/: Flex.pm  Flex.pm.m4  Makefile.am  Makefile.in  Stack.pm  Stack.pm.m4  base.pm  base.pm.m4  debugger.pm  debugger.pm.m4  embedperl.pm  embedperl.pm.m4  m80loader.pm  m80loader.pm.m4  m80path.pm  m80path.pm.m4  m80util.pm  m80util.pm.m4  repositoryLoader.pm  repositoryLoader.pm.m4  version.pm  version.pm.m4
lib/perl/m80/Helpers/: Makefile.am  Makefile.in  PerlObject.pm
lib/perl/m80/db/: Makefile.am  Makefile.in  dbiGeneric.pm  postgresql.pm  query.pm  query.pm.m4
lib/perl/m80/generator/: Makefile.am  Makefile.in  date.pm  date.pm.m4  webGen.pm  webGen.pm.m4  webGenOracle.pm  webGenPostgres.pm
lib/perl/m80/util/: Makefile.am  Makefile.in  TieWithCallback.pm  TieWithCallback.pm.m4
lib/perl/templates/: db.tpl  repository.tpl
lib/perl/templates/db/: DB.sql.m4  NodeMakefile  baselineMakefile  localObjects.sql  module.mk  srcCodeMakefile  srcMakefile  srcSchemaBranchMakefile  srcSchemaMakefile
lib/perl/templates/repository/: LeafMakefile  NodeMakefile
lib/shell/: HDabsolutePathTest.sh  HDcheckfile.sh  HDcleanup.sh  HDdocmd.sh  HDdocmdi.sh  HDdocmdq.sh  HDdocmdqi.sh  HDfilesize.sh  HDheader.sh  HDloadenv.sh  HDlock.sh  HDlock3.sh  HDpd_usage.sh  HDprintmsg.sh  HDrequire.sh  HDshellcommands.sh  HDsshcommand.sh  HDtransform.sh  Makefile.am  Makefile.in  absolutePathTest.sh  checkfile.sh  cleanup.sh  docmd.sh  docmdi.sh  docmdq.sh  docmdqi.sh  filesize.sh  header.sh  loadenv.sh  lock.sh  lock3.sh  pd_usage.sh  printmsg.sh  require.sh  shell.FAQ  shellScripts.m4  shellSnippets.m4  shellcommands.sh  show.sh  (+1 more)
lib/texi/: Makefile.am  Makefile.in  texiGeneric.m4
lib/vbs/: recursiveCall.vbs
lib/xml/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  cvs.sh  semantic.cache
src/buildSite/: env.cgi  printenv
src/fxcmd/: Makefile.am  fxcmd.c
src/m4/: Makefile  base.m4  dep.m4  m4doc.m4  make.m4  rules_for_writing_m4_libraries.html  rules_for_writing_m4_libraries.txt
src/make/: Makefile  globals.mk  index.html  leaf.html  leaf.mk.m4  m4rules.m4  node.mk  systemWide.html  systemWide.mk  test.mk
src/template/: Makefile.am  depth.mk  source_Makefile.mk.m4  test_Makefile.mk.m4
src/util/: Makefile.am  Makefile.in  ac_bundle_installer  ac_bundle_installer.sh.m4  addappendenv.pl  blackBox  blackBox.sh.m4  branch.pl  branch.pl.m4  buildMAPI  buildMAPI.sh.m4  buildPatch  buildPatch.sh.m4  buildSite.pl  buildSite.pl.m4  cvsMoveDir  cvsMoveDir.sh.m4  cvsRmDir  cvsRmDir.sh.m4  dependencyList.sh.m4  diffObjects  directiveParser  directiveParser.pl.m4  embedperl.pl  embedperl.pl.m4  embedperl.ptkdb  exportXML  exportXML.pl.m4  genPopFile  genPopFile.pl.m4  httpTail.sh  lispgen.el  longline  longline.pl.m4  m4conv  m4conv.sh.m4  m80.sh.m4  m80croncmd  m80croncmd.pl.m4  m80repos.pl  (+47 more)
src/util/t/: base.m4.t  embedperl1.t  embedperl1.t.test.m80  m80templateDir1.t  m80usage.t  newModule.t  runPath1.t  runPath2.t  usage.t
src/util/t/m80templateDir1/check/: Makefile  README  sshExample.sh.m80
src/util/t/m80templateDir1/src/: Makefile.mdl  README.mdl  manifest.pl  module.xml.m80.mdl
src/util/t/m80templateDir1/src/templates/: README
src/util/t/runPath1/frexec/: FrameworkUtil.xml
src/util/t/runPath1/test/: ConfigF5Tasks.xml  ETLTaskTemplate.xml.good  LRALoadTasks.xml
src/util/t/runPath2/: nodesttest.xml.good  nodesttest.xml.m80
templates/: Makefile.am  Makefile.in  genTemplateAPI.tmpl  makefileam.tmpl  perlscript.tmpl
templates/autoconfTemplate/: Makefile.am  Makefile.in  configure.in.m80
templates/autoconfTemplate/autofiles/: Makefile.am  Makefile.in  ac_bundler_special_files.mk
templates/generic/: Makefile.in  Makefile.m80
templates/m80xmlRepos/: Makefile.am  Makefile.in  Makefile.m80  README.m80  convert.sh  module.mk.m80
templates/m80xmlRepos/bdfs/: Makefile.in  Makefile.m80
templates/m80xmlRepos/envs/: Makefile.in  README.m80
templates/m80xmlRepos/generic/: Makefile.m80
templates/m80xmlRepos/projects/: Makefile.am  Makefile.in  README.m80
tests/: .localenv.plx  Makefile.am  Makefile.in  README
tests/perl/: Makefile.am  Makefile.in  funcs_with_args.cache  nested_functions.cache  nested_functions.sh.plx  pp_include.inc  pp_test.cache  pp_test.sh.plx
tests/shell/: Makefile.am  Makefile.in  getopt.sh.m4
(+112 files in other folders)
